--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,25 @@
 
+<section id="projects" class="section">
+  <h2>My Projects</h2>
+  <p>Here are a few beginner projects I’m working on as part of my learning journey:</p>
+
+  <div class="project-list">
+    <div class="project-card">
+      <h3>📱 Simple Calculator</h3>
+      <p>A basic calculator made using HTML, CSS, and JavaScript that performs addition, subtraction, multiplication, and division.</p>
+      <p><strong>Status:</strong> Coming Soon</p>
+    </div>
+
+    <div class="project-card">
+      <h3>🌐 Portfolio Website</h3>
+      <p>This website itself! Built using HTML and CSS, hosted with GitHub Pages to showcase my skills and projects.</p>
+      <a href="https://rohit-yadav5.github.io" class="btn" target="_blank">View Live</a>
+    </div>
+
+    <div class="project-card">
+      <h3>🎬 Movie Search App</h3>
+      <p>A React-based web app that lets users search for movies using the OMDB API. Displays titles, posters, and summaries.</p>
+      <p><strong>Status:</strong> Coming Soon</p>
+    </div>
+  </div>
+</section>
