--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,13 @@
 
+<section id="contact" class="section">
+  <h2>Contact Me</h2>
+  <p>If you’d like to connect, collaborate, or offer an opportunity, feel free to reach out using any of the methods below:</p>
+
+  <ul class="contact-info">
+    <li>📧 Email: <a href="mailto:rohityadav.0620@gmail.com">rohityadav.0620@gmail.com</a></li>
+    <li>🔗 LinkedIn: <a href="https://linkedin.com/in/rohityadav5" target="_blank">linkedin.com/in/rohityadav5</a></li>
+    <li>💻 GitHub: <a href="https://github.com/rohit-yadav5" target="_blank">github.com/rohit-yadav5</a></li>
+  </ul>
+
+  <p>You can also leave a message using the contact form (Coming Soon).</p>
+</section>
