--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav>
       <h1>Rohit Yadav</h1>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="home">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="projects">Projects</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
     </nav>
   </header>
