--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rohit Yadav | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,58 +13,58 @@
     <nav>
       <h1>Rohit Yadav</h1>
       <ul>
-        <li><a href="home">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="projects">Projects</a></li>
-        <li><a href="contact">Contact</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- Home Section -->
-  <section id="home" class="section">
+  <section class="section" id="home">
     <h2>Welcome!</h2>
-    <p>I'm Rohit Yadav, a BCA student passionate about web development and programming.</p>
-    <a href="#projects" class="btn">View My Projects</a>
+    <p>I'm <strong>Rohit Yadav</strong>, a BCA student passionate about web development, Python, and React. I'm building real-world projects while learning HTML, CSS, JavaScript, and GitHub.</p>
+    <a href="projects.html" class="btn">View My Projects</a>
   </section>
 
-  <!-- About Section -->
-  <section id="about" class="section">
+  <!-- About Section Preview -->
+  <section class="section" id="about-preview">
     <h2>About Me</h2>
-    <p>
-      I’m currently pursuing my Bachelor’s in Computer Applications at Amity University. I enjoy building simple web projects and learning tools like HTML, CSS, JavaScript, Python, and React.
-    </p>
+    <p>I enjoy building websites, learning frontend tools, and creating useful projects. I'm currently working on multiple beginner projects and building this portfolio site to showcase my growth.</p>
+    <a href="about.html" class="btn">Read More</a>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
+  <!-- Projects Section Preview -->
+  <section class="section" id="projects-preview">
+    <h2>Projects Overview</h2>
     <div class="project-list">
       <div class="project-card">
-        <h3>Simple Calculator</h3>
-        <p>HTML, CSS, JavaScript</p>
-        <p>Status: Coming Soon</p>
+        <h3>📱 Simple Calculator</h3>
+        <p>A basic calculator using HTML, CSS & JS. Coming Soon.</p>
       </div>
       <div class="project-card">
-        <h3>Portfolio Website</h3>
-        <p>This website itself – hosted using GitHub Pages!</p>
-      </div>
-      <div class="project-card">
-        <h3>Movie Search App</h3>
-        <p>React + OMDB API</p>
-        <p>Status: Coming Soon</p>
+        <h3>🌐 Portfolio Website</h3>
+        <p>This website! Built with HTML/CSS and hosted on GitHub Pages.</p>
+        <a href="https://rohit-yadav5.github.io" class="btn" target="_blank">View Live</a>
       </div>
     </div>
+    <a href="projects.html" class="btn">See All Projects</a>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:rohityadav.0620@gmail.com">rohityadav.0620@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/rohityadav5" target="_blank">linkedin.com/in/rohityadav5</a></p>
-    <p>GitHub: <a href="https://github.com/rohit-yadav5" target="_blank">github.com/rohit-yadav5</a></p>
+  <!-- Contact Section Preview -->
+  <section class="section" id="contact-preview">
+    <h2>Get in Touch</h2>
+    <p>If you'd like to reach out or collaborate, feel free to contact me.</p>
+    <ul class="contact-info">
+      <li>Email: <a href="mailto:rohityadav.0620@gmail.com">rohityadav.0620@gmail.com</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/rohityadav5" target="_blank">linkedin.com/in/rohityadav5</a></li>
+      <li>GitHub: <a href="https://github.com/rohit-yadav5" target="_blank">github.com/rohit-yadav5</a></li>
+    </ul>
+    <a href="contact.html" class="btn">Full Contact Page</a>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Rohit Yadav. All rights reserved.</p>
   </footer>
