--- a/about.html
+++ b/about.html
@@ -17,10 +17,34 @@
       </ul>
     </nav>
   </header>
+<section id="about" class="section">
+  <h2>About Me</h2>
+  <p>
+    Hello! I'm <strong>Rohit Yadav</strong>, a Bachelor of Computer Applications (BCA) student with a growing passion for web development and programming. I enjoy building clean, simple websites and learning how different technologies work together to create modern, user-friendly experiences.
+  </p>
+  <p>
+    I created this portfolio website as a space to showcase my progress and projects. It's built using pure <strong>HTML</strong>, <strong>CSS</strong>, and hosted on <strong>GitHub Pages</strong>. This project helped me understand how to structure multi-page websites, write reusable code, and publish projects online.
+  </p>
+  <p>
+    I'm currently improving my skills in:
+    <ul>
+      <li>Frontend: HTML, CSS, JavaScript, React (beginner)</li>
+      <li>Programming: Python (intermediate)</li>
+      <li>Tools: Git, GitHub, VS Code</li>
+    </ul>
+  </p>
+  <p>
+    In the future, I plan to work on more hands-on projects including:
+    <ul>
+      <li>A Simple Calculator Web App</li>
+      <li>A Movie Search App using React & OMDB API</li>
+      <li>Basic Python-based tools for automation</li>
+    </ul>
+  </p>
+  <p>
+    I’m always open to learning and exploring new technologies. If you’d like to connect, collaborate, or just say hi, feel free to <a href="contact.html">contact me</a>!
+  </p>
+</section>
 
-  <section class="section">
-    <h2>About Me</h2>
-    <p>I’m a BCA student passionate about web development, Python, and React.</p>
-  </section>
 </body>
 </html>
