calculator project update

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
       <div class="project-card">
         <h3>📱 Simple Calculator</h3>
         <p>A basic calculator made using HTML, CSS, and JavaScript that performs addition, subtraction, multiplication, and division.</p>
-        <p><strong>Status:</strong> Coming Soon</p>
+        <a href="https://rohit-yadav5.github.io/calculator" class="btn" target="_blank">View Live</a>
       </div>
 
       <div class="project-card">
