--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="project-card">
         <h3>📱 Simple Calculator</h3>
         <p>A basic calculator using HTML, CSS & JS. Coming Soon.</p>
+        <a href="https://rohit-yadav5.github.io/calculator" class="btn" target="_blank">View Live</a>
       </div>
       <div class="project-card">
         <h3>🌐 Portfolio Website</h3>
